test/files/run/repl-reset.check

scala> val x1 = 1
val x1: Int = 1

scala> val x2 = 2
val x2: Int = 2

scala> val x3 = 3
val x3: Int = 3

scala> case class BippyBungus()
class BippyBungus

scala> x1 + x2 + x3
val res0: Int = 6

scala> :reset
Resetting REPL state.
Forgetting this session history:

val x1 = 1
val x2 = 2
val x3 = 3
case class BippyBungus()
x1 + x2 + x3

Forgetting all expression results and named terms: $intp, BippyBungus, x1, x2, x3
Forgetting defined types: BippyBungus

scala> x1 + x2 + x3
       ^
       error: not found: value x1
            ^
       error: not found: value x2
                 ^
       error: not found: value x3

scala> val x1 = 4
val x1: Int = 4

scala> new BippyBungus
           ^
       error: not found: type BippyBungus

scala> class BippyBungus() { def f = 5 }
class BippyBungus

scala> { new BippyBungus ; x1 }
val res2: Int = 4

scala> :quit
